2003-09-01  Guido Flohr  <guido@imperia.net>

	* x-perl.c (extract_balanced): Access the global last_token.
	Initialize last_token and prefer_division_over_regexp here. 
	(extract_perl): Not here.

2003-08-29  Bruno Haible  <bruno@clisp.org>

	* x-perl.c: Include getline.h.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.msvc (format.obj, msgmerge.obj, xgettext.obj, msgattrib.obj,
	msgcat.obj, msgcomm.obj, msgconv.obj, msgen.obj, msgfilter.obj,
	msggrep.obj, msguniq.obj): Compile these in C++ mode. This works around
	the "non-constant initializer" error that we get for addresses of
	variables in DLLs in C mode.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* msgfilter.c (process_message): Cast xrealloc() result.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* msgfilter.c: On Windows, include <io.h> instead of <unistd.h>.
	* msggrep.c: Likewise.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* plural-count.h: New file.
	* plural-count.c: New file, extracted from msgmerge.c.
	* msgmerge.c: Include plural-count.h instead of plural-exp.h.
	(match_domain): Use function get_plural_count().
	* Makefile.am (noinst_HEADERS): Add plural-count.h.
	(msgmerge_SOURCES): Add plural-count.c.
	* Makefile.msvc (msgmerge_OBJECTS): Add plural-count.obj.
	(plural-count.obj): New rule.
	* Makefile.vms (msgmerge_OBJECTS): Add plural-count.obj.
	(plural-count.obj): New rule.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	Support for building DLLs on Windows.
	* format.h (formatstring_c, formatstring_python, formatstring_lisp,
	formatstring_elisp, formatstring_librep, formatstring_smalltalk,
	formatstring_java, formatstring_awk, formatstring_pascal,
	formatstring_ycp, formatstring_tcl, formatstring_perl,
	formatstring_perl_brace, formatstring_php, formatstring_gcc_internal,
	formatstring_parsers): Add DLL_VARIABLE attribute.
	* message.h (format_language, format_language_pretty): Likewise.
	* msgl-cat.h (more_than, less_than, use_first, msgcomm_mode,
	omit_header): Likewise.